hphp/hack/test/dynamic_view/reason_err_messages.php.exp
File "reason_err_messages.php", line 4, characters 10-30:
Invalid return type (Typing[4110])
  File "reason_err_messages.php", line 3, characters 27-29:
  This is an int
  File "reason_err_messages.php", line 4, characters 10-19:
  It is incompatible with a dynamic value
File "reason_err_messages.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
  File "reason_err_messages.php", line 7, characters 33-35:
  This is an int
  File "reason_err_messages.php", line 8, characters 8-17:
  It is incompatible with a dynamic value
File "reason_err_messages.php", line 17, characters 9-10:
Invalid return type (Typing[4110])
  File "reason_err_messages.php", line 13, characters 31-33:
  This is an int
  File "reason_err_messages.php", line 16, characters 12-20:
  It is incompatible with a dynamic value
File "reason_err_messages.php", line 21, characters 8-10:
This call is invalid, this is not a function, it is an int (Typing[4009])
File "reason_err_messages.php", line 22, characters 10-11:
Invalid return type (Typing[4110])
  File "reason_err_messages.php", line 20, characters 22-24:
  This is an int
  File "reason_err_messages.php", line 21, characters 8-10:
  It is incompatible with a dynamic value
